fixed some problems on mobile version

--- a/scss/common/btn.scss
+++ b/scss/common/btn.scss
@@ -9,6 +9,7 @@
     padding: rem(10px) rem(20px);
     text-transform: uppercase;
     font-size: rem(13px);
+    transition: .3s;
 
     &:hover {
     background-color: #c1401e;
