--- a/scss/header.scss
+++ b/scss/header.scss
@@ -57,6 +57,12 @@
     font-size: rem(13px);
     color: #ffffff;
     text-transform: uppercase;
+    border-bottom: rem(1px) solid transparent;
+    transition: .3s;
+
+    &:hover {
+        border-bottom: rem(1px) solid #fff;
+    }
 }
 
 }
