--- a/scss/sections/contacts.scss
+++ b/scss/sections/contacts.scss
@@ -13,7 +13,7 @@
     bottom:0;
 }
 
-.footer_container {
+.footer__container {
     display: flex;
     width:90%;
     margin: 0 auto;
